--- a/mainwin.ui
+++ b/mainwin.ui
@@ -34,6 +34,9 @@
         <property name="defaultDropAction">
          <enum>Qt::MoveAction</enum>
         </property>
+        <property name="selectionMode">
+         <enum>QAbstractItemView::ExtendedSelection</enum>
+        </property>
         <attribute name="headerVisible">
          <bool>false</bool>
         </attribute>
@@ -158,7 +161,7 @@
   </action>
   <action name="actNewPage">
    <property name="text">
-    <string>New</string>
+    <string>New page</string>
    </property>
   </action>
   <action name="actOpenSrc">
@@ -206,7 +209,7 @@
      <normaloff>:/folder.png</normaloff>:/folder.png</iconset>
    </property>
    <property name="text">
-    <string>new Dir</string>
+    <string>New dir</string>
    </property>
   </action>
   <action name="actSplit">
