--- a/mainwin.ui
+++ b/mainwin.ui
@@ -160,6 +160,10 @@
    </property>
   </action>
   <action name="actNewPage">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/newpage.png</normaloff>:/newpage.png</iconset>
+   </property>
    <property name="text">
     <string>New page</string>
    </property>
@@ -213,6 +217,10 @@
    </property>
   </action>
   <action name="actSplit">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/split.png</normaloff>:/split.png</iconset>
+   </property>
    <property name="text">
     <string>Split</string>
    </property>
@@ -258,11 +266,19 @@
    </property>
   </action>
   <action name="actFindUntrn">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/find.png</normaloff>:/find.png</iconset>
+   </property>
    <property name="text">
     <string>Find untranslated</string>
    </property>
   </action>
   <action name="actMerge">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/merge.png</normaloff>:/merge.png</iconset>
+   </property>
    <property name="text">
     <string>Merge</string>
    </property>
