--- a/resources.qrc
+++ b/resources.qrc
@@ -7,5 +7,7 @@
         <file>merge.png</file>
         <file>split.png</file>
         <file>newpage.png</file>
+        <file>Japan.png</file>
+        <file>Translate.png</file>
     </qresource>
 </RCC>
