--- a/resources.qrc
+++ b/resources.qrc
@@ -9,5 +9,6 @@
         <file>newpage.png</file>
         <file>Japan.png</file>
         <file>Translate.png</file>
+        <file>replace.png</file>
     </qresource>
 </RCC>
