--- a/resources.qrc
+++ b/resources.qrc
@@ -10,5 +10,6 @@
         <file>Japan.png</file>
         <file>Translate.png</file>
         <file>replace.png</file>
+        <file>clear.png</file>
     </qresource>
 </RCC>
