--- a/mainwin.ui
+++ b/mainwin.ui
@@ -28,7 +28,7 @@
        </size>
       </property>
       <property name="contextMenuPolicy">
-       <enum>Qt::ActionsContextMenu</enum>
+       <enum>Qt::CustomContextMenu</enum>
       </property>
       <property name="dragDropMode">
        <enum>QAbstractItemView::InternalMove</enum>
@@ -129,7 +129,7 @@
    </property>
    <widget class="QMenu" name="menuFile">
     <property name="title">
-     <string>File</string>
+     <string>&amp;File</string>
     </property>
     <addaction name="actNewProj"/>
     <addaction name="actOpen"/>
@@ -138,7 +138,7 @@
    </widget>
    <widget class="QMenu" name="menuPage">
     <property name="title">
-     <string>Page</string>
+     <string>&amp;Page</string>
     </property>
     <addaction name="actNewPage"/>
     <addaction name="separator"/>
@@ -149,7 +149,7 @@
    </widget>
    <widget class="QMenu" name="menuOptions">
     <property name="title">
-     <string>Options</string>
+     <string>&amp;Options</string>
     </property>
     <addaction name="actGrabCbrd"/>
    </widget>
@@ -159,7 +159,7 @@
   </widget>
   <action name="actOpen">
    <property name="text">
-    <string>Open...</string>
+    <string>&amp;Open...</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+O</string>
@@ -167,7 +167,7 @@
   </action>
   <action name="actNewProj">
    <property name="text">
-    <string>New</string>
+    <string>&amp;New</string>
    </property>
   </action>
   <action name="actNewPage">
@@ -176,17 +176,17 @@
      <normaloff>:/newpage.png</normaloff>:/newpage.png</iconset>
    </property>
    <property name="text">
-    <string>New page</string>
+    <string>&amp;New page</string>
    </property>
   </action>
   <action name="actOpenSrc">
    <property name="text">
-    <string>Open source...</string>
+    <string>&amp;Open source...</string>
    </property>
   </action>
   <action name="actSaveAs">
    <property name="text">
-    <string>Save as...</string>
+    <string>Save &amp;as...</string>
    </property>
    <property name="toolTip">
     <string>Save as</string>
@@ -203,7 +203,7 @@
   </action>
   <action name="actSave">
    <property name="text">
-    <string>Save</string>
+    <string>&amp;Save</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+S</string>
@@ -238,7 +238,7 @@
   </action>
   <action name="actSaveSrc">
    <property name="text">
-    <string>Save source</string>
+    <string>&amp;Save source</string>
    </property>
   </action>
   <action name="actSort">
@@ -255,12 +255,12 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>Grab clipboard</string>
+    <string>&amp;Grab clipboard</string>
    </property>
   </action>
   <action name="actInsertSrc">
    <property name="text">
-    <string>Insert source...</string>
+    <string>&amp;Insert source...</string>
    </property>
   </action>
   <action name="actFindUntrn">
