--- a/mainwin.ui
+++ b/mainwin.ui
@@ -79,6 +79,9 @@
          <property name="editTriggers">
           <set>QAbstractItemView::NoEditTriggers</set>
          </property>
+         <property name="selectionBehavior">
+          <enum>QAbstractItemView::SelectRows</enum>
+         </property>
          <property name="gridStyle">
           <enum>Qt::DotLine</enum>
          </property>
