--- a/resources.qrc
+++ b/resources.qrc
@@ -11,5 +11,7 @@
         <file>Translate.png</file>
         <file>replace.png</file>
         <file>clear.png</file>
+        <file>icon.png</file>
+        <file>add.png</file>
     </qresource>
 </RCC>
