--- a/mainwin.ui
+++ b/mainwin.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>872</width>
-    <height>398</height>
+    <width>862</width>
+    <height>388</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -62,10 +62,18 @@
        <item>
         <layout class="QGridLayout" name="editGrid" columnstretch="0,10">
          <item row="1" column="1">
-          <widget class="QLineEdit" name="trnline"/>
+          <widget class="QLineEdit" name="trnline">
+           <property name="contextMenuPolicy">
+            <enum>Qt::ActionsContextMenu</enum>
+           </property>
+          </widget>
          </item>
          <item row="0" column="1">
-          <widget class="QLineEdit" name="srcline"/>
+          <widget class="QLineEdit" name="srcline">
+           <property name="contextMenuPolicy">
+            <enum>Qt::ActionsContextMenu</enum>
+           </property>
+          </widget>
          </item>
          <item row="0" column="0">
           <widget class="QLineEdit" name="srcname"/>
@@ -161,7 +169,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>872</width>
+     <width>862</width>
      <height>21</height>
     </rect>
    </property>
@@ -343,6 +351,51 @@
    </property>
    <property name="text">
     <string>Set icon</string>
+   </property>
+  </action>
+  <action name="actSplitLine">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/split.png</normaloff>:/split.png</iconset>
+   </property>
+   <property name="text">
+    <string>Split line</string>
+   </property>
+  </action>
+  <action name="actSplitName">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/talk.png</normaloff>:/talk.png</iconset>
+   </property>
+   <property name="text">
+    <string>Split name</string>
+   </property>
+  </action>
+  <action name="actAddBookmark">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/bookmark.png</normaloff>:/bookmark.png</iconset>
+   </property>
+   <property name="text">
+    <string>Edit bookmark</string>
+   </property>
+  </action>
+  <action name="actRmBookmark">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/delete.png</normaloff>:/delete.png</iconset>
+   </property>
+   <property name="text">
+    <string>Remove bookmark</string>
+   </property>
+  </action>
+  <action name="actJoinLine">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/merge.png</normaloff>:/merge.png</iconset>
+   </property>
+   <property name="text">
+    <string>Join next line</string>
    </property>
   </action>
  </widget>
