--- a/mainwin.ui
+++ b/mainwin.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>862</width>
-    <height>388</height>
+    <width>860</width>
+    <height>386</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -169,8 +169,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>862</width>
-     <height>21</height>
+     <width>860</width>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -396,6 +396,11 @@
    </property>
    <property name="text">
     <string>Join next line</string>
+   </property>
+  </action>
+  <action name="actSaveBranch">
+   <property name="text">
+    <string>Save branch</string>
    </property>
   </action>
  </widget>
