--- a/mainwin.ui
+++ b/mainwin.ui
@@ -148,6 +148,13 @@
           </spacer>
          </item>
          <item>
+          <widget class="QLabel" name="labInfo">
+           <property name="text">
+            <string/>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QProgressBar" name="progress">
            <property name="value">
             <number>0</number>
@@ -170,7 +177,7 @@
      <x>0</x>
      <y>0</y>
      <width>860</width>
-     <height>22</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
