--- a/mainwin.ui
+++ b/mainwin.ui
@@ -27,7 +27,7 @@
          <enum>Qt::CustomContextMenu</enum>
         </property>
         <property name="editTriggers">
-         <set>QAbstractItemView::EditKeyPressed|QAbstractItemView::SelectedClicked</set>
+         <set>QAbstractItemView::DoubleClicked|QAbstractItemView::EditKeyPressed|QAbstractItemView::SelectedClicked</set>
         </property>
         <property name="dragDropMode">
          <enum>QAbstractItemView::InternalMove</enum>
@@ -205,6 +205,7 @@
      <string>&amp;Options</string>
     </property>
     <addaction name="actGrabCbrd"/>
+    <addaction name="actBookmarks"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuPage"/>
@@ -405,6 +406,20 @@
   <action name="actSaveBranch">
    <property name="text">
     <string>Save branch</string>
+   </property>
+  </action>
+  <action name="actionList">
+   <property name="text">
+    <string>List</string>
+   </property>
+  </action>
+  <action name="actBookmarks">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/bookmark.png</normaloff>:/bookmark.png</iconset>
+   </property>
+   <property name="text">
+    <string>Bookmarks</string>
    </property>
   </action>
  </widget>
