--- a/mainwin.ui
+++ b/mainwin.ui
@@ -132,6 +132,17 @@
           </widget>
          </item>
          <item>
+          <widget class="QToolButton" name="tbImages">
+           <property name="text">
+            <string>...</string>
+           </property>
+           <property name="icon">
+            <iconset resource="resources.qrc">
+             <normaloff>:/picture.png</normaloff>:/picture.png</iconset>
+           </property>
+          </widget>
+         </item>
+         <item>
           <spacer name="horizontalSpacer_2">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
