--- a/bookmark.ui
+++ b/bookmark.ui
@@ -76,6 +76,9 @@
        <property name="enabled">
         <bool>false</bool>
        </property>
+       <property name="placeholderText">
+        <string>new</string>
+       </property>
       </widget>
      </item>
      <item row="2" column="0">
@@ -105,7 +108,7 @@
      <item>
       <widget class="QPushButton" name="pbAdd">
        <property name="text">
-        <string>Add bookmark</string>
+        <string>OK</string>
        </property>
        <property name="icon">
         <iconset resource="resources.qrc">
